--- a/src/app/game/game-list/game-list.component.html
+++ b/src/app/game/game-list/game-list.component.html
@@ -1,7 +1,9 @@
 <div class="row">
   <div class="col-xs-12">
     <p style="text-align: center">
-      TASK: 1. Fix Toggle of Detail Button
+      TASK: 1. Fix Toggle of Detail Button <br>
+            2. Implement Form Concept <br>
+            3. Implement Http Concept and retrieve it from firebase
     </p>
     <h1 style="text-align: center">Game List</h1>
     <hr />
