--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,15 +30,22 @@
           ><span class="glyphicon glyphicon-heart"></span> Wishlist</a
         >
       </ul>
+
+      <ul class="navbar-brand" routerLinkActive="active">
+        <a routerLink="sell"
+          ><span class="glyphicon glyphicon-modal-window"></span> Sell</a
+        >
+      </ul>
       <!-- dropdown -->
       <ul class="navbar-brand navbar-right">
         <div class="dropdown" appDropdownDirective>
           <a style="cursor: pointer;" class="dropdown-toggle"
-            >Shortcut <span class="caret"></span
+            >Option <span class="caret"></span
           ></a>
           <ul class="dropdown-menu">
             <li style="cursor: pointer;"><a >Cancelled Orders</a></li>
             <li style="cursor: pointer;"><a >Purchase History</a></li>
+            <li style="cursor: pointer;"><a >Selling Items List</a></li>
           </ul>
         </div>
       </ul>
