sell compoenent and sell list was built

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,13 +39,13 @@
       <!-- dropdown -->
       <ul class="navbar-brand navbar-right">
         <div class="dropdown" appDropdownDirective>
-          <a style="cursor: pointer;" class="dropdown-toggle"
+          <a style="cursor: pointer" class="dropdown-toggle"
             >Option <span class="caret"></span
           ></a>
           <ul class="dropdown-menu">
-            <li style="cursor: pointer;"><a >Cancelled Orders</a></li>
-            <li style="cursor: pointer;"><a >Purchase History</a></li>
-            <li style="cursor: pointer;"><a >Selling Items List</a></li>
+            <li style="cursor: pointer"><a>Cancelled Orders</a></li>
+            <li style="cursor: pointer"><a>Purchase History</a></li>
+            <li style="cursor: pointer"><a routerLink="/sell/list">Selling Items List</a></li>
           </ul>
         </div>
       </ul>
