--- a/src/app/sell-item/sell-list/sell-list.component.html
+++ b/src/app/sell-item/sell-list/sell-list.component.html
@@ -1,1 +1,36 @@
-<p>sell-list works!</p>
+<div class="container-fluid">
+  <div class="card col-xs-12">
+    <div class="card-body">
+      <h1 class="card-title text-center">Games For Sell</h1>
+      <hr />
+      <h3 class="card-text">Listed Games</h3>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">
+        <div class="row">
+          <div class="col-xs-12 col-sm-2">
+            <img src="https://wallpapers.com/images/featured/3vau5vtfa3qn7k8v.jpg" alt="" style="max-width: 120px; max-height: 100px" />
+          </div>
+          <div class="col-xs-12 col-sm-6">
+            <div class="row">
+              <div class="col-xs-6">
+                <h4>Game Name:</h4>
+              </div>
+              <div class="col-xs-6">
+                <h4 style="float: right;">Rating:</h4>
+              </div>
+              <div class="col-xs-6">
+                <h4>Description:</h4>
+              </div>
+              <div class="col-xs-6">
+                <h4 style="float: right;">Selling Price:</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li class="list-group-item">Item 2</li>
+      <li class="list-group-item">Item 3</li>
+    </ul>
+  </div>
+</div>
