changed the header layout

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="bg-gray-900 py-4 shadow-md">
     <div class="container mx-auto px-6 flex items-center justify-between flex-wrap">
         <!-- Logo -->
-        <div class="text-white font-semibold text-xl">
+        <div class="text-white font-semibold text-xl justify-start">
             <a routerLink="/" class="hover:text-gray-200">GameStore</a>
         </div>
 
@@ -13,7 +13,7 @@
         </button>
 
         <!-- Navigation Links -->
-        <div id="mobile-menu" class="w-full md:w-auto md:flex md:items-center">
+        <div id="mobile-menu" class="w-full md:w-auto md:flex md:items-center ml-auto">
             <ul class="md:flex md:items-center md:space-x-6 text-center">
                 <li>
                     <a routerLink="shop" routerLinkActive="text-blue-400" class="block md:inline-block py-2 px-4 text-gray-300 hover:text-white">
