--- a/src/app/game/game-list/game-list.component.html
+++ b/src/app/game/game-list/game-list.component.html
@@ -1,6 +1,11 @@
 <div class="container mx-auto py-8 px-4">
   <h1 class="text-3xl font-bold text-center text-gray-800 mb-6">Game List</h1>
-  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+
+   <div *ngIf="loading" class="flex justify-center items-center py-16">
+    <app-spinner></app-spinner>
+  </div>
+
+  <div  *ngIf="!loading" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
     <app-game-item
       *ngFor="let game of games; let i = index"
       [index]="i"
