add game detail modal and modal service; refactor game item component for modal integration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <main>
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </main>
 <app-toast></app-toast>
+<app-game-detail-modal></app-game-detail-modal>
